syntax = "proto3";

package urlshortener;

option go_package = "app/proto";

service URLShortenerService {
  rpc CreateShortURL (CreateShortURLRequest) returns (CreateShortURLResponse);
  rpc GetOriginalURL (GetOriginalURLRequest) returns (GetOriginalURLResponse);
  rpc GetUserURLs (GetUserURLsRequest) returns (GetUserURLsResponse);
  rpc DeleteUserURLs (DeleteUserURLsRequest) returns (DeleteUserURLsResponse);
}

message CreateShortURLRequest {
  string original_url = 1;
}

message CreateShortURLResponse {
  string short_url = 1;
}

message GetOriginalURLRequest {
  string short_url = 1;
}

message GetOriginalURLResponse {
  string original_url = 1;
}

message GetUserURLsRequest {
  string user_id = 1;
}

message GetUserURLsResponse {
  repeated UserURL urls = 1;
}

message UserURL {
  string short_url = 1;
  string original_url = 2;
}

message DeleteUserURLsRequest {
  repeated string short_urls = 1;
}

message DeleteUserURLsResponse {
  string message = 1;
}
